--- a/resources/sass/_functions.scss
+++ b/resources/sass/_functions.scss
@@ -57,3 +57,52 @@
 //@include linear-gradient(#31B7D7, #EDAC7D);
 //@include linear-gradient(to right, #E47D7D 0%, #C195D3 50%, #4FB4E8 100%);
 //@include linear-gradient(42deg, #B58234 0%, #D2B545 50%, #D7C04D 50.01%, #FFFFFF 100%);
+
+@mixin pb_box-shadow($top, $left, $blur, $offset, $color, $inset: false) {
+  @if $inset {
+    -webkit-box-shadow: inset $top $left $blur $offset $color;
+    -moz-box-shadow: inset $top $left $blur $offset $color;
+    box-shadow: inset $top $left $blur $offset $color;
+  } @else {
+    -webkit-box-shadow: $top $left $blur $offset $color;
+    -moz-box-shadow: $top $left $blur $offset $color;
+    box-shadow: $top $left $blur $offset $color;
+  }
+}
+
+@mixin pb_gradient($from, $to, $deg) {
+  background: $from; /* Old browsers */
+  background: -moz-linear-gradient($deg, $from 0%, $to 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient($deg, $from 0%, $to 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient($deg, $from 0%, $to 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$from}', endColorstr='#{$to}', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+}
+
+@mixin pb_text-gradient($from, $to, $deg) {
+  background: $from; /* Old browsers */
+  background: -moz-linear-gradient($deg, $from 0%, $to 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient($deg, $from 0%, $to 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient($deg, $from 0%, $to 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@mixin scaleOnHover($scale) {
+  -webkit-animation: none;
+  -webkit-transform: scale($scale);
+  -moz-animation: none;
+  -moz-transform: scale($scale);
+  -ms-transform: scale($scale);
+  -o-animation: none;
+  -o-transform: scale($scale);
+  animation: none;
+  transform: scale($scale);
+}
+
+@mixin transition($time) {
+  //-webkit-transition: width 0.3s ease, margin 0.3s ease;
+  -webkit-transition: $time s all ease;
+  -moz-transition: $time s all ease;
+  -o-transition: $time s all ease;
+  transition: $time s all ease;
+}
