get data and map finished

--- a/resources/sass/_functions.scss
+++ b/resources/sass/_functions.scss
@@ -71,11 +71,11 @@
 }
 
 @mixin pb_gradient($from, $to, $deg) {
-  background: $from; /* Old browsers */
-  background: -moz-linear-gradient($deg, $from 0%, $to 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient($deg, $from 0%, $to 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient($deg, $from 0%, $to 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$from}', endColorstr='#{$to}', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+  background: $from !important; /* Old browsers */
+  background: -moz-linear-gradient($deg, $from 0%, $to 100%) !important; /* FF3.6-15 */
+  background: -webkit-linear-gradient($deg, $from 0%, $to 100%) !important; /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient($deg, $from 0%, $to 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$from}', endColorstr='#{$to}', GradientType=1) !important; /* IE6-9 fallback on horizontal gradient */
 }
 
 @mixin pb_text-gradient($from, $to, $deg) {
