--- a/resources/sass/my-sass.scss
+++ b/resources/sass/my-sass.scss
@@ -1,33 +1,57 @@
+.border-all {
+  border-top-right-radius: 24px !important;
+  border-bottom-right-radius: 24px !important;
+
+  border-top-left-radius: 24px !important;
+  border-bottom-left-radius: 5px !important;
+}
+
 .border {
   border-top-right-radius: 24px !important;
   border-bottom-right-radius: 24px !important;
 
   border-top-left-radius: 24px !important;
-  border-bottom-left-radius: 1px !important;
+  border-bottom-left-radius: 5px !important;
 }
 
 .left-border {
   border-top-right-radius: 24px !important;
   border-bottom-right-radius: 24px !important;
 
-  border-top-left-radius: 1px !important;
-  border-bottom-left-radius: 1px !important;
+  border-top-left-radius: 2px !important;
+  border-bottom-left-radius: 2px !important;
 }
 
 .right-border {
   border-top-left-radius: 24px !important;
-  border-bottom-left-radius: 1px !important;
+  border-bottom-left-radius: 2px !important;
 
-  border-top-right-radius: 1px !important;
-  border-bottom-right-radius: 1px !important;
+  border-top-right-radius: 2px !important;
+  border-bottom-right-radius: 2px !important;
+}
+
+.left-bottom-border {
+  border-top-right-radius: 24px !important;
+  border-bottom-right-radius: 2px !important;
+
+  border-top-left-radius: 2px !important;
+  border-bottom-left-radius: 2px !important;
+}
+
+.right-bottom-border {
+  border-top-left-radius: 2px !important;
+  border-bottom-left-radius: 24px !important;
+
+  border-top-right-radius: 2px !important;
+  border-bottom-right-radius: 2px !important;
 }
 
 .no-radius {
-  border-top-left-radius: 1px !important;
-  border-bottom-left-radius: 1px !important;
+  border-top-left-radius: 2px !important;
+  border-bottom-left-radius: 2px !important;
 
-  border-top-right-radius: 1px !important;
-  border-bottom-right-radius: 1px !important;
+  border-top-right-radius: 2px !important;
+  border-bottom-right-radius: 2px !important;
 }
 
 .selected-item {
@@ -40,11 +64,55 @@
   display: inline-block;
 }
 
+//****************uploader
+.thumb-container {
+  .img-thumbnail.hide {
+    //@include transition(1s);
+    transition: 1s all ease;
+  }
+}
+
+.uploader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: dashed $primary;
+  border-radius: $border-radius;
+  min-height: 8rem;
+  &:hover, &.hover {
+    color: lighten($primary, 20%);
+    cursor: pointer;
+  }
+
+  #uploader-message, h6 {
+    font-size: x-small;
+
+  }
+
+}
+
+.close-btn {
+  border-radius: 1.5rem 1.5rem 1.5rem .2rem;
+  //padding: .5rem .8rem;
+  position: absolute;
+  margin: .3rem;
+  left: 1rem;
+  top: 0;
+  &:hover {
+    transition: .3s all ease;
+    background: lighten($danger, 10%) !important;
+    cursor: pointer;
+  }
+}
+
+//****************uploader
+
 #map {
   max-height: 20rem;
   //width: 100%;
   min-height: 20rem;
-  width: 100%;
+  //width: 100%;
 
   position: relative;
   //padding: 2rem;
@@ -124,7 +192,9 @@ input[type=text] {
 input[type=number] {
   text-align: center;
   //outline: none;
-  border: solid rgba(120, 120, 120, .5) .1rem !important;
+  font-size: .8rem;
+
+  border: solid rgba(120, 120, 120, .5) .05rem !important;
 
   &.left-border {
     border-radius: 24px 24px 24px 1px !important;
