--- a/resources/sass/_search-box.scss
+++ b/resources/sass/_search-box.scss
@@ -2,13 +2,14 @@ $background: white;
 
 .search-container {
   background: $background;
-  width: 100%;
+
+  //width: 100%;
   @include pb_box-shadow(1px, 11px, 68px, -20px, rgba($black, .75));
-  margin: 2rem .01rem 1rem .1rem;
+  margin: 0rem .1rem .5rem .1rem;
   border-radius: $border-radius;
   padding: 0.5rem 0.5rem;
   min-height: 18rem;
-  min-width: 11rem;
+  //min-width: 11rem;
   max-width: 100%;
   //font-size: .8rem !important;
   @include media-breakpoint-down(sm) {
