--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,6 +28,7 @@ $icon-font-path: '../fonts/';
 @import 'card';
 @import 'search-box';
 @import 'dropdown';
+@import 'panel';
 @import 'my-sass';
 
 @font-face {
