--- a/resources/sass/my-sass.scss
+++ b/resources/sass/my-sass.scss
@@ -172,6 +172,7 @@
   content: url("/img/loading.gif");
   //background-image: url("../../../../public/img/loading.gif");
   top: 50vh;
+  left: 50vw;
   width: 8rem;
   height: 8rem;
   overflow: hidden;
