first checks passed

--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,5 +1,11 @@
 //created at tazhan system
 //all rights reserved
+
+#navbar {
+  transition: top 0.3s;
+
+}
+
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.9);
 }
