--- a/resources/sass/_home.scss
+++ b/resources/sass/_home.scss
@@ -1,452 +1,9 @@
-///* --------------------------
-//:: Template Name: Colorlib App - App Landing Page
-//:: Template Author: Colorlib
-//:: Template Author URI: https://colorlib.com/
-//:: Description: Colorlib is a One Page based App Landing Template. It's very clean, creative & beautiful. It's super     responsive & ultra light.
-//:: Tags: Colorlib, App Landing, Apps, Responsive App Landing, Bootstrap 4, Free Theme, Free HTML Template, HTML5 Template etc.
-//:: Version: v1.0
-//:: Created: 11/03/2017
-//-------------------------- */
-///* --- [Master Stylesheet] ----
-//:: 1.0 Base CSS Start
-//:: 2.0 Header Area CSS
-//:: 3.0 Wellcome Area CSS
-//:: 4.0 Special Area CSS
-//:: 5.0 Features Area CSS
-//:: 6.0 Video Area CSS
-//:: 7.0 Cool Facts Area CSS
-//:: 8.0 Screenshots Area CSS
-//:: 9.0 Pricing Plan Area CSS
-//:: 10.0 Testimonials Area CSS
-//:: 11.0 CTA Area CSS Start
-//:: 12.0 Team Area CSS Start
-//:: 13.0 Contact Area CSS Start
-//:: 14.0 Footer Area CSS Start
-//-------------------------- */
-////@import url('https://fonts.googleapis.com/css?family=Cabin:400,500,700|Montserrat:400,500,700');
-////@import 'css/bootstrap.min.css';
-////@import 'css/animate.css';
-////@import 'css/magnific-popup.css';
-////@import 'css/owl.carousel.min.css';
-////@import 'css/slick.css';
-////@import 'css/font-awesome.min.css';
-////@import 'css/themify-icons.css';
-////@import 'css/ionicons.min.css';
-//
-///* --------------------------
-//:: 1.0 Base CSS Start
-//-------------------------- */
-//
-//* {
-//  margin: 0;
-//  padding: 0;
-//}
-//
-//body {
-//  font-family: 'Cabin', sans-serif;
-//  background-color: #fff;
-//}
-//
-//h1,
-//h2,
-//h3,
-//h4,
-//h5,
-//h6 {
-//  font-family: 'Cabin', sans-serif;
-//  font-weight: 400;
-//  color: #000;
-//  line-height: 1.2;
-//}
-//
-//.section_padding_100 {
-//  padding-top: 100px;
-//  padding-bottom: 100px;
-//}
-//
-//.section_padding_100_50 {
-//  padding-top: 100px;
-//  padding-bottom: 50px;
-//}
-//
-//.section_padding_100_70 {
-//  padding-top: 100px;
-//  padding-bottom: 70px;
-//}
-//
-//.section_padding_50 {
-//  padding-top: 50px;
-//  padding-bottom: 50px;
-//}
-//
-//.section_padding_50_20 {
-//  padding-top: 50px;
-//  padding-bottom: 20px;
-//}
-//
-//.section_padding_150 {
-//  padding-top: 150px;
-//  padding-bottom: 150px;
-//}
-//
-//.section_padding_200 {
-//  padding-top: 200px;
-//  padding-bottom: 200px;
-//}
-//
-//.section_padding_0_100 {
-//  padding-top: 0;
-//  padding-bottom: 100px;
-//}
-//
-//.section_padding_70 {
-//  padding-top: 70px;
-//  padding-bottom: 70px;
-//}
-//
+
 .section_padding_0_50 {
   padding-top: 0;
   padding-bottom: 50px;
 }
 
-//
-//img {
-//  max-width: 100%;
-//  max-height: 100%;
-//}
-//
-//.mt-15 {
-//  margin-top: 15px;
-//}
-//
-//.mt-30 {
-//  margin-top: 30px;
-//}
-//
-//.mt-40 {
-//  margin-top: 40px;
-//}
-//
-//.mt-50 {
-//  margin-top: 50px;
-//}
-//
-//.mt-100 {
-//  margin-top: 100px;
-//}
-//
-//.mt-150 {
-//  margin-top: 150px;
-//}
-//
-//.mr-15 {
-//  margin-right: 15px;
-//}
-//
-//.mr-30 {
-//  margin-right: 30px;
-//}
-//
-//.mr-50 {
-//  margin-right: 50px;
-//}
-//
-//.mr-100 {
-//  margin-right: 100px;
-//}
-//
-//.mb-15 {
-//  margin-bottom: 15px;
-//}
-//
-//.mb-30 {
-//  margin-bottom: 30px;
-//}
-//
-//.mb-50 {
-//  margin-bottom: 50px;
-//}
-//
-//.mb-100 {
-//  margin-bottom: 100px;
-//}
-//
-//.ml-15 {
-//  margin-left: 15px;
-//}
-//
-//.ml-30 {
-//  margin-left: 30px;
-//}
-//
-//.ml-50 {
-//  margin-left: 50px;
-//}
-//
-//.ml-100 {
-//  margin-left: 100px;
-//}
-//
-//ul,
-//ol {
-//  margin: 0;
-//  padding: 0;
-//}
-//
-//#scrollUp {
-//  bottom: 0;
-//  font-size: 24px;
-//  right: 30px;
-//  width: 50px;
-//  background-color: #fb397d;
-//  color: #fff;
-//  text-align: center;
-//  height: 50px;
-//  line-height: 50px;
-//}
-//
-//a,
-//a:hover,
-//a:focus,
-//a:active {
-//  text-decoration: none;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//}
-//
-//li {
-//  list-style: none;
-//}
-//
-//p {
-//  color: #726a84;
-//  font-size: 16px;
-//  font-weight: 300;
-//  margin-top: 0;
-//}
-//
-//.heading-text > p {
-//  font-size: 16px;
-//}
-//
-//.section-heading > h2 {
-//  font-weight: 300;
-//  color: #5b32b4;
-//  font-size: 48px;
-//  margin: 0;
-//}
-//
-//.section-heading {
-//  margin-bottom: 60px;
-//}
-//
-//.line-shape-white,
-//.line-shape {
-//  width: 80px;
-//  height: 2px;
-//  background-color: #fb397d;
-//  margin-top: 15px;
-//}
-//
-//.line-shape {
-//  margin-left: calc(50% - 40px);
-//}
-//
-//.table {
-//  display: table;
-//  height: 100%;
-//  left: 0;
-//  position: relative;
-//  top: 0;
-//  width: 100%;
-//  z-index: 2;
-//}
-//
-//.table-cell {
-//  display: table-cell;
-//  vertical-align: middle;
-//}
-//
-//#preloader {
-//  overflow: hidden;
-//  background-color: #fff;
-//  height: 100%;
-//  left: 0;
-//  position: fixed;
-//  top: 0;
-//  width: 100%;
-//  z-index: 999999;
-//}
-//
-//.colorlib-load {
-//  -webkit-animation: 2000ms linear 0s normal none infinite running colorlib-load;
-//  animation: 2000ms linear 0s normal none infinite running colorlib-load;
-//  background: transparent none repeat scroll 0 0;
-//  border-color: #dddddd #dddddd #fb397d;
-//  border-radius: 50%;
-//  border-style: solid;
-//  border-width: 2px;
-//  height: 40px;
-//  left: calc(50% - 20px);
-//  position: relative;
-//  top: calc(50% - 20px);
-//  width: 40px;
-//  z-index: 9;
-//}
-//
-//@-webkit-keyframes colorlib-load {
-//  0% {
-//    -webkit-transform: rotate(0deg);
-//    transform: rotate(0deg);
-//  }
-//  100% {
-//    -webkit-transform: rotate(360deg);
-//    transform: rotate(360deg);
-//  }
-//}
-//
-//@keyframes colorlib-load {
-//  0% {
-//    -webkit-transform: rotate(0deg);
-//    transform: rotate(0deg);
-//  }
-//  100% {
-//    -webkit-transform: rotate(360deg);
-//    transform: rotate(360deg);
-//  }
-//}
-//
-///* --------------------------
-//:: 2.0 Header Area CSS
-//-------------------------- */
-//
-//.header_area {
-//  left: 0;
-//  position: absolute;
-//  width: 100%;
-//  z-index: 99;
-//  top: 0;
-//  padding: 0 4%;
-//}
-//
-//.menu_area .navbar-brand {
-//  font-size: 72px;
-//  font-weight: 700;
-//  color: #fff;
-//  margin: 0;
-//  line-height: 1;
-//  padding: 0;
-//}
-//
-//.menu_area .navbar-brand:hover,
-//.menu_area .navbar-brand:focus {
-//  color: #fff;
-//}
-//
-//.menu_area {
-//  position: relative;
-//  z-index: 2;
-//}
-//
-//.menu_area #nav .nav-link {
-//  color: #fff;
-//  display: block;
-//  font-size: 16px;
-//  font-weight: 500;
-//  border-radius: 30px;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//  padding: 35px 15px;
-//}
-//
-//.menu_area nav ul li > a:hover {
-//  color: #fb397d;
-//}
-//
-//.sing-up-button {
-//  text-align: right;
-//}
-//
-//.sing-up-button > a {
-//  color: #fff;
-//  font-weight: 500;
-//  display: inline-block;
-//  border: 2px solid #a883e9;
-//  height: 50px;
-//  min-width: 178px;
-//  line-height: 46px;
-//  text-align: center;
-//  border-radius: 24px 24px 24px 0px;
-//}
-//
-//.sing-up-button > a:hover {
-//  background: #fb397d;
-//  color: #fff;
-//  border-color: transparent;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//}
-//
-///* stcicky css */
-//
-//.header_area.sticky {
-//  background-color: #884bdf;
-//  -webkit-box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-//  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-//  height: 70px;
-//  position: fixed;
-//  top: 0;
-//  z-index: 99;
-//}
-//
-//.header_area.sticky .menu_area .navbar-brand {
-//  font-size: 50px;
-//}
-//
-//.header_area.sticky .menu_area #nav .nav-link {
-//  padding: 23px 15px;
-//}
-//
-//.header_area.sticky .navbar {
-//  padding: 0;
-//}
-//
-///* --------------------------
-//:: 3.0 Wellcome Area CSS
-//-------------------------- */
-//
-
-//
-//.wellcome_area:after {
-//  position: absolute;
-//  width: 100%;
-//  left: 0;
-//  height: 2px;
-//  background-color: #fff;
-//  content: '';
-//  bottom: 0;
-//  z-index: 2;
-//}
-
-//
-//.welcome-thumb {
-//  width: 45%;
-//  position: absolute;
-//  bottom: -130px;
-//  right: 85px;
-//  z-index: 9;
-//}
-//
-//.welcome-thumb img {
-//  height: auto;
-//  width: 100%;
-//}
-//
-
-//
 .get-start-area .email {
   background: #9572e8;
   height: 50px;
@@ -487,19 +44,46 @@
   border-radius: 30px;
 }
 
+.wellcome-bottoms-container {
+  position: absolute;
+  top: 20rem;
+  @include media-breakpoint-down(lg) {
+
+    //margin-top: 350px;
+    top: 30rem;
+  }
+  @include media-breakpoint-down(md) {
+
+    top: 25rem;
+
+  }
+  @include media-breakpoint-down(sm) {
+    //margin-top: 200px;
+    //height: 50px;
+    top: 20rem;
+    //transform: scale(0.7);
+  }
+  @include media-breakpoint-down(xs) {
+    transform: scale(0.8);
+    top: 15rem;
+  }
+}
+
 //
-.get-start-area .m-btn {
+.wellcome-bottoms-container .m-btn {
   background-color: #fb397d;
   color: #fff;
 
+  //margin-top: -500px;
   display: inline-block;
   border: none;
   height: 50px;
-  min-width: 167px;
+  width: 50%;
   line-height: 35px;
   text-align: center;
   border-radius: $border-radius;
-  margin-left: 10px;
+  //margin-left: 10px;
+  position: relative;
   &:hover {
 
     background: #6f52e5;
@@ -508,22 +92,7 @@
     -o-transition-duration: 500ms;
     transition-duration: 500ms;
   }
-  @include media-breakpoint-down(md) {
-    max-width: 167px;
-    height: 50px;
 
-  }
-  @include media-breakpoint-down(sm) {
-    max-width: 50px;
-    height: 50px;
-  }
-  @include media-breakpoint-down(xs) {
-    font-size: 15px;
-    height: 30px;
-    font-weight: 100;
-    line-height: 10px;
-    margin-top: 5px;
-  }
 }
 
 .wellcome-area {
@@ -547,60 +116,65 @@
   }
 }
 
-//
-//.get-start-area .submit:hover {
-//  background: #6f52e5;
-//  color: #fff;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//}
-
-//
 .wellcome-heading > p {
   color: #fff;
-  position: relative;
-  //top: 20rem;
-}
+  position: absolute;
+  top: 25rem;
+  @include media-breakpoint-down(xl) {
+    //top: -500px;
+    top: 25rem;
 
-.wellcome-heading > h2 {
-  font-size: 100px;
-  color: #ffffff;
-  top: 0;
-  font-weight: 700;
-  position: relative;
-  z-index: 3;
+  }
   @include media-breakpoint-down(md) {
-    font-size: 80px;
+    //top: -400px;
+    top: 20rem;
+
   }
   @include media-breakpoint-down(sm) {
-    font-size: 50px;
+    //top: -400px;
+    top: 15rem;
+
   }
   @include media-breakpoint-down(xs) {
+    font-size: .8rem;
+    //top: -200px;
+    top: 12rem;
 
-    font-size: 20px;
   }
+  //top: -250px;
 }
 
 //
-.wellcome-heading > h3 {
-  font-size: 300px;
+.wellcome-heading > h2 {
+  font-size: 100px;
   position: absolute;
-  top: -100px;
-  font-weight: 900;
+  top: 5rem;
+  //top: -500px;
+  //bottom: 500px;
+  //font-weight: 900;
   //left: -12px;
   z-index: -1;
   color: #fff;
-  opacity: .05;
+  opacity: .09;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(xl) {
+    //top: -500px;
+    font-size: 150px;
 
-    font-size: 200px;
+  }
+  @include media-breakpoint-down(md) {
+    //top: -400px;
+    font-size: 100px;
 
   }
   @include media-breakpoint-down(sm) {
+    //top: -400px;
+    font-size: 80px;
 
-    font-size: 100px;
+  }
+  @include media-breakpoint-down(xs) {
+    //top: -200px;
+    font-size: 50px;
 
   }
 }
@@ -610,7 +184,7 @@
   width: 100%;
   //height: 100%;
   overflow: hidden;
-  position: absolute;
+  position: relative;
   top: -100px;
   //font-weight: 900;
 
@@ -643,128 +217,6 @@
   margin-bottom: 100px;
 }
 
-//
-///* --------------------------
-//:: 4.0 Special Area CSS
-//-------------------------- */
-
-//.single-icon > i {
-//  font-size: 36px;
-//  color: #fb397d;
-//}
-//
-//.single-special > h4 {
-//  font-size: 22px;
-//  color: #5b32b4;
-//}
-//
-//.single-icon {
-//  margin-bottom: 25px;
-//}
-//
-//.single-special > h4 {
-//  font-size: 22px;
-//  color: #5b32b4;
-//  margin-bottom: 15px;
-//}
-//
-//.single-special {
-//  border: 1px solid #eff2f6;
-//  padding: 40px;
-//  border-radius: 40px 40px 40px 0px;
-//  -webkit-transition-duration: 800ms;
-//  -o-transition-duration: 800ms;
-//  transition-duration: 800ms;
-//  margin-bottom: 30px;
-//}
-//
-//.special_description_content > h2 {
-//  color: #5b32b4;
-//  font-size: 48px;
-//  margin-bottom: 30px;
-//}
-//
-//.single-special:hover {
-//  -webkit-box-shadow: 0 10px 90px rgba(0, 0, 0, 0.08);
-//  box-shadow: 0 10px 90px rgba(0, 0, 0, 0.08);
-//}
-//
-//.single-special p {
-//  margin-bottom: 0;
-//}
-//
-//.app-download-area {
-//  display: -moz-flex;
-//  display: -ms-flex;
-//  display: -o-flex;
-//  display: -webkit-box;
-//  display: -ms-flexbox;
-//  display: flex;
-//  //-ms-flex-preferred-size: 1;
-//  flex-basis: 1rem;
-//  margin-top: 50px;
-//}
-//
-//.app-download-btn a {
-//  border: 1px solid #ddd;
-//  display: -webkit-box;
-//  display: -ms-flexbox;
-//  display: flex;
-//  -webkit-box-align: center;
-//  -ms-flex-align: center;
-//  align-items: center;
-//  padding: 15px 30px;
-//  border-radius: 30px 30px 30px 0;
-//  -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-//  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-//  -webkit-box-pack: center;
-//  -ms-flex-pack: center;
-//  justify-content: center;
-//}
-//
-//.app-download-btn.active a,
-//.app-download-btn a:hover {
-//  border-color: transparent;
-//  background-color: #fb397d;
-//}
-//
-//.app-download-btn a i {
-//  color: #47425d;
-//  font-size: 24px;
-//  margin-right: 15px;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//}
-//
-//.app-download-btn a p {
-//  font-size: 16px;
-//  line-height: 1;
-//  -webkit-transition-duration: 500ms;
-//  -o-transition-duration: 500ms;
-//  transition-duration: 500ms;
-//}
-//
-//.app-download-btn a p span {
-//  font-size: 12px;
-//  display: block;
-//}
-//
-//.app-download-btn:first-child {
-//  margin-right: 20px;
-//}
-//
-//.app-download-btn a:hover i,
-//.app-download-btn.active a i,
-//.app-download-btn.active a p,
-//.app-download-btn a:hover p {
-//  color: #fff;
-//}
-//
-///* --------------------------
-//:: 5.0 Features Area CSS
-//-------------------------- */
-//
 .single-feature {
   margin-bottom: 50px;
 }
@@ -788,6 +240,67 @@
 
 .single-feature > p {
   margin-top: 15px;
+}
+
+.m-features {
+  border: solid .3rem;
+  border-radius: $border-radius;
+  position: relative;
+
+  transform: scale(1);
+  -webkit-transition-duration: 500ms;
+  -o-transition-duration: 500ms;
+  transition-duration: 500ms;
+  &:hover {
+    background: #6f52e5;
+    transform: scale(1.05);
+  }
+  .m-features-header {
+    position: relative;
+    z-index: 1;
+    font-weight: bold;
+    top: -1rem;
+
+    span {
+
+      padding-left: 1rem;
+      padding-right: 1rem;
+      background: #fff;
+      border-radius: $border-radius;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    font-size: .5rem !important;
+
+  }
+  @include media-breakpoint-down(md) {
+    font-size: 1rem !important;
+  }
+
+  .counter-value {
+
+    font-weight: bold;
+    background: yellow;
+    height: 5rem;
+    width: 5rem;
+    padding: 5rem;
+    border-radius: 100rem;
+    @include media-breakpoint-down(sm) {
+      font-size: 1rem !important;
+
+    }
+    @include media-breakpoint-down(md) {
+      font-size: 2rem !important;
+    }
+    @include media-breakpoint-down(lg) {
+      font-size: 3rem !important;
+    }
+  }
+}
+
+.madrese-num {
+  margin-top: 8rem;
 }
 
 ///* --------------------------
